Grammar and spelling fixes for memory tips, also changed font sizes on smaller screens.

--- a/assets/memoryTips.css
+++ b/assets/memoryTips.css
@@ -252,3 +252,28 @@ button {
         display: none;
     }
 }
+
+@media screen and (max-width: 700px){
+    p {
+        font-size: 1.2rem;
+    }
+    h1{
+        font-size: 2.7rem;
+    }
+    h2{
+        font-size: 2.4rem;
+    }
+    h3{
+        font-size: 2.4rem;
+    }
+    li{
+        font-size: 1.2rem;
+    }
+    button{
+        font-size: 2.7rem;
+    }
+    #number-stat{
+        font-size: 1.2rem;
+    }
+
+}
